--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
