--- a/manifest.json
+++ b/manifest.json
@@ -26,148 +26,148 @@
   ],
   "icons": [
     {
-      "src": "/AppImages/android/android-launchericon-48-48.png",
+      "src": "android-launchericon-48-48.png",
       "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/android/android-launchericon-72-72.png",
+      "src": "android-launchericon-72-72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/android/android-launchericon-96-96.png",
+      "src": "android-launchericon-96-96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/android/android-launchericon-144-144.png",
+      "src": "android-launchericon-144-144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/android/android-launchericon-512-512.png",
+      "src": "android-launchericon-512-512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/16.png",
+      "src": "16.png",
       "sizes": "16x16",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/32.png",
+      "src": "32.png",
       "sizes": "32x32",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/40.png",
+      "src": "40.png",
       "sizes": "40x40",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/50.png",
+      "src": "50.png",
       "sizes": "50x50",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/57.png",
+      "src": "57.png",
       "sizes": "57x57",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/58.png",
+      "src": "58.png",
       "sizes": "58x58",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/60.png",
+      "src": "60.png",
       "sizes": "60x60",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/64.png",
+      "src": "64.png",
       "sizes": "64x64",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/72.png",
+      "src": "72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/76.png",
+      "src": "76.png",
       "sizes": "76x76",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/80.png",
+      "src": "80.png",
       "sizes": "80x80",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/87.png",
+      "src": "87.png",
       "sizes": "87x87",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/100.png",
+      "src": "100.png",
       "sizes": "100x100",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/114.png",
+      "src": "114.png",
       "sizes": "114x114",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/120.png",
+      "src": "120.png",
       "sizes": "120x120",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/128.png",
+      "src": "128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/144.png",
+      "src": "144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/152.png",
+      "src": "152.png",
       "sizes": "152x152",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/167.png",
+      "src": "167.png",
       "sizes": "167x167",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/180.png",
+      "src": "180.png",
       "sizes": "180x180",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/192.png",
+      "src": "192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/AppImages/ios/256.png",
+      "src": "256.png",
       "sizes": "256x256",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/512.png",
+      "src": "512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "/AppImages/ios/1024.png",
+      "src": "1024.png",
       "sizes": "1024x1024",
       "type": "image/png"
     }
@@ -186,7 +186,7 @@
 
   "splash_screen": {
     "show": true,
-    "image": "/AppImages/ios/1024.png"
+    "image": "1024.png"
   }
 
 }
